Fix spacing on images

--- a/style.css
+++ b/style.css
@@ -1,56 +1,18 @@
 /* images on home page */
-.column1of3, .column2of3, .column3of3 {
+.column1of3 img {
 	float: left;
 	width: 460px;
-	margin: 5px;
-
+	margin: 20px 10px 20px 250px;
+	border-radius: 50px;
 }
 
-
-
-/* image with opacity and text */
-
-.column2of3 {
-	position: relative;
+.column2of3 img {
+	float: left;
+	width: 460px;
+	margin: 20px 20px 20px 100px;
+	border-radius: 50px;
 }
 
-.image {
-	opacity: 1;
-	display: block;
-	backface-visibility: hidden;
-}
-
-.middle {
-	opacity: 0;
-	position: absolute;
-	top: 50%;
-	left: 75%;
-	transform: translate(-10%, -50%);
-	-ms-transform: translate(-75%, -75%);
-}
-
-.column2of3:hover .image {
-	opacity: 0.3;
-}
-
-.column2of3:hover .middle {
-	opacity: 1;
-}
-
-.text {
-	color: #181C19;
-	font-size: 18px;
-	font-family: Merriweather;
-	padding: 100px;
-	text-align: center;
-}
-
-.text footer {
-	font-family: Sacramento;
-	font-size: 20px;
-}
-
-/* end of image with text */
 
 h2, h3 {
 	font-family: Raleway, sans-serif;
@@ -81,7 +43,9 @@ p {
 
 img {
 	border-radius: 50px;
-	margin: 0px 250px 0px 250px;
+	margin: 20px 230px;
+	max-width: 460px;
+	display: block;
 }
 
 /* max margin space on right side home page */
@@ -111,6 +75,7 @@ img {
 	color: #181C19;
 	text-decoration: none;
 	text-transform: uppercase;
+	font-weight: 700;
 	letter-spacing: 0.3em;
 	text-align: center;
 
@@ -203,6 +168,16 @@ img {
 	line-height: 200%;
 }
 
+.otherHikes {
+	float: left;
+	font-family: Merriweather, serif;
+	font-size: 16px;
+	letter-spacing: 0.05em;
+	margin: 10px 10px 20px 250px;
+	color: #181C19;
+	line-height: 200%;
+}
+
 
 /* contact me stuff */
 .contactMe h3 {
@@ -227,7 +202,6 @@ img {
 
 .aspen img {
 	float: right;
-	margin: 200px 240px;
 }
 
 @media screen and (min-width:380px) and (max-width:960px)
